# pongstars-api

./: .env  Cargo.toml  README.md  docker-compose.yml  makefile
.github/workflows/: continuous_integration.yml
docs/: Testing.md
migrations/2020-07-04-214551_player_league_match_challenge/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/db/: db_integration_tests.rs  mod.rs  models.rs  player.rs  players.rs  pool.rs  schema.rs
src/db/models/: challenge.rs  game.rs  league.rs  mod.rs  player.rs  player_league.rs  reference_models.rs  table_tennis_match.rs  tt_match.rs
src/graphql/: auth.rs  challenge.rs  context.rs  endpoints.rs  league.rs  mocks.rs  mod.rs  player.rs  table_tennis_match.rs
tests/: pool.rs
