[package]
name = "pongstars-api"
version = "0.1.0"
authors = ["Vlady Veselinov <vladislav.veselinov@fanduel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
juniper = "0.14.1"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
r2d2 = "0.8.9"
serde_json = "1.0.44"
serde = { version = "1.0.102", features = ["derive"] }
env_logger = "0.7.1"
dotenv = "0.15.0"
listenfd = "0.3"