[package]
name = "pongstars-api"
version = "0.1.0"
authors = ["Vlady Veselinov <vladislav.veselinov@fanduel.com>"]
edition = "2018"

[features]
default = []
integration_tests = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tide = "0.13.0"
async-std = { version = "1.6.0", features = ["attributes"] }
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "c964fd8" }
sqlx = { version = "0.4.0-beta.1", features = ["postgres" ]}
serde_json = "1.0.56"
serde = { version = "1.0.114", features = ["derive"] }
env_logger = "0.7.1"
dotenv = "0.15.0"
chrono = "0.4.13"
lazy_static = "1.4.0"
